<resources>
    <string name="app_name">PLib</string>
    <string name="theplib_app_name">Privacy-Library</string>
    <string name="theplib_error_enc_dec">Error encrypting/decrypting file</string>
    <string name="theplib_apppets_privacy_protection_flow">AppPETs Privacy Self Data Flow Protection</string>
    <string name="theplib_apppets_privacy_protection_access">AppPETs Privacy Self Data Access Protection</string>
    <string name="theplib_apppets_privacy_protection_view_flow">AppPETs Privacy Self Data Flow Protection Info</string>
    <string name="theplib_apppets_privacy_protection_view_access">AppPETs Privacy Self Data Access Protection Info</string>
    <string name="theplib_apppets_flow_permission">Do you permit data flow?</string>
    <string name="theplib_apppets_access_permission">Do you permit data access for further flow?</string>
    <string name="theplib_data">Data:</string>
    <string name="theplib_remember_decision">Remember Decision</string>
    <string name="theplib_remember_decision_everywhere">   Remember Decision Everywhere</string>
    <string name="theplib_apppets_privacy_lib_alert">Privacy-Lib Alert</string>
    <string name="theplib_allow">Allow</string>
    <string name="theplib_deny">Deny</string>
    <string name="theplib_anonymize">Anonymize</string>
    <string name="theplib_anonymized">Anonymized</string>
    <string name="theplib_pseudonymized">Pseudonymized</string>
    <string name="theplib_encrypted">Encrypted</string>
    <string name="theplib_encrypted2">encrypted</string>
    <string name="theplib_not_encrypted2">not encrypted</string>
    <string name="theplib_handle_data">Handle</string>
    <string name="theplib_all_decisions_removed">Removed all reminded decisions</string>
    <string name="theplib_title_app_name">App Name:</string>
    <string name="theplib_title_description">Description:</string>
    <string name="theplib_title_decision">Decision:</string>
    <string name="theplib_title_decision_time">Decision Time:</string>
    <string name="theplib_dev_no_descr">Be aware! Developer didn\'t left a description about the data field!</string>
    <string name="theplib">Privacy Library</string>
    <string name="theplib_settings">You are now within the area of the Privacy Library</string>
    <string name="theplib_content">Content:</string>
    <string name="theplib_master_key">Master Key</string>
    <string name="theplib_pservices">Privacy Services</string>
    <string name="theplib_pservices_descr">Show/Set Privacy Services</string>
    <string name="theplib_pki_key">PKI</string>
    <string name="theplib_pki_key_descr">Public Key Infrastructure Issues</string>
    <string name="theplib_master_key_descr">Export or Import the P-Lib Master Key</string>
    <string name="theplib_flow_decision">Stored Flow Decisions</string>
    <string name="theplib_flow_decision_descr">List/Revoke remembered flow decisions</string>
    <string name="theplib_info">Info</string>
    <string name="theplib_info_descr">Request Privacy Library Information</string>
    <string name="theplib_not_implemented_action">Not implemented action!</string>
    <string name="theplib_grants">Grants</string>
    <string name="theplib_grants_descr">List/Revoke grant decisions</string>
    <string name="theplib_denies">Denies</string>
    <string name="theplib_denies_descr">List/Revoke deny decisions</string>
    <string name="theplib_anonymizations">Anonymizations</string>
    <string name="theplib_anonymizations_descr">List/Revoke anonymization decisions</string>
    <string name="theplib_pseudonymizations">Pseudonymizations</string>
    <string name="theplib_pseudonymizations_descr">List/Revoke pseudonymization decisions</string>
    <string name="theplib_encryptions">Encryptions</string>
    <string name="theplib_encryptions_descr">List/Revoke encryption decisions</string>
    <string name="theplib_reset_decisions">Remove all decisions</string>
    <string name="theplib_info_content">AppPETs Privacy Library\n\nThe privacy library (plib) is a SDK library with the aim to assist developers in developing privacy-friendly mobile applications. The development of this library is an outcome of the BMBF-founded project \"AppPETs\". BMBF stands for \"Bundesministerium für Bildung und Forschung\" (\"Federal Ministry of Education and Research\") in Germany.\n\nFollowing institutes and organizations are involved in this project:</string>
    <string name="theplib_illegal_state">Illegal state</string>
    <string name="theplib_settings_title">Settings</string>
    <string name="theplib_data_type">Data Type:</string>
    <string name="theplib_hash">Hash Value:</string>
    <string name="theplib_stack">App Stack Trace:</string>
    <string name="theplib_apppets_flow_remove_decision">Remove Decision?</string>
    <string name="theplib_remove">Remove</string>
    <string name="theplib_cancel">Cancel</string>
    <string name="theplib_ok">OK</string>
    <string name="theplib_error_removing_decision">Could not remove decision from plib data base!</string>
    <string name="theplib_removed_decision">Decision removed from plib data base</string>
    <string name="theplib_export">Export Master Key</string>
    <string name="theplib_export_descr">Export the P-Lib Master Key as file or in form of a QR-Code</string>
    <string name="theplib_import">Import Master Key</string>
    <string name="theplib_import_descr">Import the P-Lib Master Key from file or through a QR-Code and re-initiate the P-Lib</string>
    <string name="theplib_export_qr">Export Master Key as QR-Code</string>
    <string name="theplib_export_qr_descr">Export the P-Lib Master Key in form of a QR-Code</string>
    <string name="theplib_export_file">Export Master Key as File</string>
    <string name="theplib_export_file_descr">Export the P-Lib Master Key in form of a file</string>
    <string name="theplib_import_qr">Import Master Key from QR-Code</string>
    <string name="theplib_import_qr_descr">Import the P-Lib Master Key from a QR-Code and re-initiate the P-Lib</string>
    <string name="theplib_import_file">Import Master Key from File</string>
    <string name="theplib_import_file_descr">Import the P-Lib Master Key from a file and re-initiate the P-Lib</string>
    <string name="theplib_enter_password">Enter Password:</string>
    <string name="theplib_enter_password_again">Enter Password Again:</string>
    <string name="theplib_passwords_do_not_match">Passwords do not match!</string>
    <string name="theplib_encryption_password">P-Lib Encryption Password</string>
    <string name="theplib_decryption_password">P-Lib Decryption Password</string>
    <string name="theplib_install_barcode_scanner">Install Barcode Scanner?</string>
    <string name="theplib_install_barcode_scanner_decr1">The P-Lib QR-Code export/import function requires Barcode Scanner. Would you like to install it?</string>
    <string name="theplib_yes">Yes</string>
    <string name="theplib_no">No</string>
    <string name="theplib_playstore_not_installed">Google Play Store is not installed!</string>
    <string name="theplib_barcode_cant_be_shown">Can\'t show QR-Code!</string>
    <string name="theplib_export_qr_info">You are now able to import the visible QR-Code as the %1$s master key through scanning it by another P-Lib instance/device.</string>
    <string name="theplib_barcode_scan_fail">Can\'t open barcode scanner!</string>
    <string name="theplib_barcode_no_scan_data">Did not received scan results!</string>
    <string name="theplib_barcode_fail_scan_data">Did not received comprehensible master key! Either you entered a wrong password or you are trying to import an unsupported version of a master key!</string>
    <string name="theplib_fc_illegal_parameters">Illegal file chooser parameters!</string>
    <string name="theplib_fc_warning_overide_file">Are you sure you want to overwrite the file \'%1$s\'?</string>
    <string name="theplib_warning">Warning</string>
    <string name="theplib_fc_press_again_to_leave">Press again to leave!</string>
    <string name="theplib_fc_folder">Folder</string>
    <string name="theplib_fc_file">File</string>
    <string name="theplib_fc_action_not_allowed">This action is not allowed for the current request!</string>
    <string name="theplib_fc_alphabetical">Alphabetical</string>
    <string name="theplib_fc_last_modified">Last Modified</string>
    <string name="theplib_fc_size">Size</string>
    <string name="theplib_fc_already_sorted">Already sorted</string>
    <string name="theplib_fc_please_enter_file_name">Please enter a valid file name</string>
    <string name="theplib_cant_create_file_illegal_name">Can\'t create file. Illegal file name!</string>
    <string name="theplib_cant_create_file_folder_available">Can\'t create file. There is already a folder with the same name!</string>
    <string name="theplib_fc_warning_overide_file2">Do you want to overwrite an existing file?</string>
    <string name="theplib_import_sure">Are you sure you want to import selected file?</string>
    <string name="theplib_export_mk_file_descr">Please select a place where to create a file with the encrypted master key and tap on the plus symbol</string>
    <string name="theplib_fc_export_error">Did not received file location!</string>
    <string name="theplib_fc_export_error2">Received illegal parameters!</string>
    <string name="theplib_create_file">Could not create a file!</string>
    <string name="theplib_exported_mk">Exported master key into following location:\n\n%1$s</string>
    <string name="theplib_import_mk_file_descr">Please select the encrypted master key as file</string>
    <string name="theplib_fc_import_error">Did not received file location!</string>
    <string name="theplib_could_not_read_file">Could not read selected file!</string>
    <string name="theplib_replaced_master_key">Master Key replaced</string>
    <string name="theplib_files_already_sorted">Files already sorted!</string>
    <string name="theplib_show_st">Show Stack Trace</string>
    <string name="theplib_debug_request_decisions">Debug: Request Decisions</string>
    <string name="theplib_app_info">App Info</string>
    <string name="theplib_app_info_descr">Get some information about the application</string>
    <string name="theplib_general_info">General App Information</string>
    <string name="theplib_general_info_descr">General Information about this application</string>
    <string name="theplib_permissions">App Permissions</string>
    <string name="theplib_permissions_descr">List app permissions</string>
    <string name="theplib_granted_permission">Granted permission</string>
    <string name="theplib_denied_permission">Denied permission</string>
    <string name="theplib_package_name">Package Name:</string>
    <string name="theplib_android">OS Information</string>
    <string name="theplib_android_descr">Information about the operating system environment</string>
    <string name="theplib_change_permissions">Change Permissions</string>
    <string name="theplib_plib_apps">Installed PLib Apps</string>
    <string name="theplib_plib_apps_descr">List all apps using the privacy library</string>
    <string name="theplib_plib_check">Check PLib App Approval</string>
    <string name="theplib_plib_check_descr">Check PLib App Auditing Approval</string>
    <string name="theplib_this_app">" [This App]"</string>
    <string name="theplib_generate_new_master_key">Generate new Master Key</string>
    <string name="theplib_generate_new_master_key_dscr">Replace Master Key with a new one</string>
    <string name="theplib_generate_new_master_key_sure">Are you sure you want to exchange the current existing Master Key with a new one? Be aware, all encryption keys are generated from the Master Key. After re-generation, you will not be able to decrypt prior encrypted files!</string>
    <string name="theplib_new_master_key_generated">New Master Key generated</string>
    <string name="theplib_plain">Plain</string>
</resources>